Resolve the awkward misalignment of consecutive diff chunks, thanks to a hint from [forum:85ab14eecd|forum post 85ab14eecd].
FossilOrigin-Name: c5a4fe54ec2b865c9292d076b57b32bb093ac07d500441a9d23b59779d4bf071

--- a/src/default.css
+++ b/src/default.css
@@ -670,11 +670,12 @@ tr.diffskip > td.chunkctrl .jcbutton:hover {
   opacity: 1;
   filter: contrast(1);
 }
-
-table.splitdiff tr.diffchunk {
+tr.diffchunk {
   display: grid;
   gap: 0px 0px;
   grid-template-rows: 1fr;
+}
+table.splitdiff tr.diffchunk {
   grid-template-columns: auto 1fr auto auto 1fr;
   grid-template-areas: "difflnl difftxtl diffsep difflnr difftxtr";
 }
